--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,9 @@ footer {
     font-weight: 500;
     color: var(--dark-brown);
 }
-
+.post-card-container .post-card a:hover {
+    text-decoration: none;
+}
 .post-card-container .post-card .post-card-author {
     font-size: 0.8rem;
     font-weight: 200;
@@ -166,6 +168,27 @@ form .search-btn {
     padding: 0.1rem 1.4rem;
     margin: 0 auto;
 }
+/* Contact */
+.contact-container {
+    min-height: 70vh;
+}
+.contact-img {
+    margin: 0 auto;
+    width: 130px;
+}
+.contact-container form{
+    margin: 0 auto;
+}
+/* Article/Post.html */
+.article-image{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+.article-image img{
+    width: 100%;
+}
+
 /* About/Page.html */
 .about-image {
     display: inline-block;
